@@ -1,3 +1,7 @@
+2021-10-02 Danilo Chang
+
+	* Update BackgroundSubtractorMOG2 command
+
 2021-10-01 Danilo Chang
 
 	* Implement command: BackgroundSubtractorKNN
